removed blend mode on clock, too much variability in background to ensure 100% visibility

--- a/static/css/clock.css
+++ b/static/css/clock.css
@@ -27,7 +27,6 @@
   width: 215px;
   height: 215px;
   z-index: 2;
-  mix-blend-mode: screen;
 }
 
 #clock-text {
@@ -37,7 +36,7 @@
   align-items: center;
   font-family: "Saira", sans-serif;
   color: white;
-  text-shadow: -1px -1px 5px black, 1px 1px 5px black, -1px 1px 5px black, 1px -1px 5px black;
+  text-shadow: -1px -1px 3px black, 1px 1px 3px black, -1px 1px 3px black, 1px -1px 3px black;
 }
 
 #clock {
